# ChangeLog for dev-python/flask-migrate
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/flask-migrate/ChangeLog,v 1.5 2015/03/24 04:28:37 patrick Exp $

*flask-migrate-1.3.1 (24 Mar 2015)

  24 Mar 2015; Patrick Lauer <patrick@gentoo.org> +flask-migrate-1.3.1.ebuild:
  Bump

  08 Mar 2015; Pacho Ramos <pacho@gentoo.org> flask-migrate-1.3.0.ebuild:
  x86 stable, bug 540290

  06 Mar 2015; Pacho Ramos <pacho@gentoo.org> flask-migrate-1.3.0.ebuild:
  amd64 stable, bug 540290

*flask-migrate-1.3.0 (04 Dec 2014)

  04 Dec 2014; Patrick Lauer <patrick@gentoo.org> +flask-migrate-1.3.0.ebuild:
  Bump

*flask-migrate-1.2.0 (20 Nov 2014)

  20 Nov 2014; Patrick Lauer <patrick@gentoo.org> +flask-migrate-1.2.0.ebuild,
  +metadata.xml:
  Initial import, ebuild by me