@@ -1,8 +1,10 @@
 DIST Flask-Migrate-1.2.0.tar.gz 7288 SHA256 37e548cd0c497194243c8c2e2c6296e72ac7d65ba4ad1fd3d8cd5848af5fed2a SHA512 56e9223be0c30179dd0f117b60650e484528650da24acf852c52c1c7f0554d83d6f2ba35191c02cc0cb72091dee48b0888183b560f439d42fa09e0f86524f6b9 WHIRLPOOL 869f37262fde54e69a245d725be80e773d635397bd8afc112f264ef76939f34a81bdee8bf4ef510399b604552d9ad2fc79bcffcb975cf7070157cbebce639a20
 DIST Flask-Migrate-1.3.0.tar.gz 8400 SHA256 8d142bcae64d45eda6efab821283841380749653e49030aea59f0059071d134a SHA512 dbec7fee9027f9446c57a3d24b171a59dcde1e7023e20efc7eb578f41b7c5228a6704edf2cf7afec5e2fc5f8c37a76abeae5a1b9cf0d95c132e7e834f31f7b14 WHIRLPOOL f8c43f3427cbd6cc72e39cfb4f4329f9e826b2b71ca3310d6831121c5a6c9f7915d3a5308f885cb27ad2d3d77197d411bda026d9636c25bbc122069c41a011f6
 DIST Flask-Migrate-1.3.1.tar.gz 8608 SHA256 d16342313936b383f30e7bc1863bd38686ac9f187a50df4161014f0207bf290b SHA512 3ed504811560e7af509187fc6850204244dc295a6d7d43505e98363af2ea282fabd2cfc2b54d5f8f5d847a8569c3a4e3fe28a7996bbb28ed829975c4014da324 WHIRLPOOL 09fcc61de8654a257257959af90917afb83b5fc9ffaee1f131eeaf557797e048c8ea740875b8c0cd7de8f10c48b5c5f2bcd33047f6f73b730d001432c1f32da3
+DIST Flask-Migrate-1.4.0.zip 12820 SHA256 e63b1aafc7bec62a63ccb8e0f5856a271ab986a044aa81a022e0c68243439258 SHA512 ca9a94fd18d302f1448c0cc188749a4585cb108efdd02ef5a51d295207a48d54540818734dcc831a068d968a1cf166d45f1815b4f0e44f4fe7455b982293a3da WHIRLPOOL f1dd52a9af10ac6cb4598f544a151e15eba51ceb5b3c742f66299f0e4870a96ce571ca59dc52e01836721add741bf32d2959377804b0f09a14ab4ef76361aaaa
 EBUILD flask-migrate-1.2.0.ebuild 922 SHA256 6ea1a2ec8e6e7b74f6f947070243c3c6a5ed6196e8a1cbade048deeffc2898bf SHA512 338426e313f36027a77a8f7862b7b59e429c09692d3e12bd08c66d9b5a8034541794ae0f17c451d301c271959f3bbc2c404ed0c83e5d0c5a10d9ef4727a7ca5b WHIRLPOOL 22ab3d16eef72272a4dd66419123267e271cd8ed8c76a3c1f8abbb94ec27b503dd9c8fc2ee79041795c46d590d5b5d1bbfe8330f54c0c04fdcdfd92ee18ce784
 EBUILD flask-migrate-1.3.0.ebuild 918 SHA256 087ed640fc1238c8faa373bcac3f4887cf582dca465371adf04b0a2e0a85f3d1 SHA512 a7f0579379464d12f346b268faf8ed8f713d9f7d97063b25cca668c46270bb99e715227998fbfbe418f3a27cc6b79b04695a1f36b65d68c5abafef466846a972 WHIRLPOOL 478d747c8823a5b11ac7561460205d68d808978e05d6313005cebd9d87bfcd0ad964863a43e829e0324f3e99e6ac8e4520fcab1e9e039dc511fe15698de54b5f
 EBUILD flask-migrate-1.3.1.ebuild 922 SHA256 22401e8868a2ee45c7a224103748758406868165fd5dd61597e40d386741e412 SHA512 5b4a56130380a03a20afaa0a9e36a11ade4582b90f4ca7e3adee91ecf4acaae28d1f1f985da9c5270c0948ff994dd9683537954a71f9524fa497ded6c16f55a9 WHIRLPOOL 0a19d402e49b77e18e43f9e20d3be0612416cf8cf9fe6bc9fc75bb1401c28052436d4a6858763ad4c464510bd0564f7d3a4f75e790c4b5db9214b63d2379dba8
-MISC ChangeLog 833 SHA256 ca93de55f03945b43f3bfc3e8ffa90ac9d27dcac4905d5a6c6db991223c1748d SHA512 3bd25fc8d6dfe232ad25f3836a49c91d54b63dbf4f101972ee76e7dc178e53b2563d4ac744f2968bcbcbbb09c2e84d805686d44f0a931510b186ec2514dbec0f WHIRLPOOL 89a2c335dfac07e2cec675b38f02b9d13adb10b0cf863016f40fd09424714a8d868336fdf135b58b1b9ea6ba9a5e9b8d89b46c08fcc9fff7a1092fe5135b361c
+EBUILD flask-migrate-1.4.0.ebuild 919 SHA256 8d25129b68e591ca820bd8d120247e17a7ec5a254afc87f05ef345051aa95743 SHA512 d63439a8bbd7872958b558c670c846d47fa158d2153c789dc855f667ca63cdad9cea25a173b42e78458e282fa50b9fd1ae11ae3a2be9e8e864712c17282186cd WHIRLPOOL 1b569b23f5ddce32efce2ac884e733bec1d869cf4267bd6e20c0cd6ebbe3a3ba8afd67738c99f70c4565bcf93cdb3915139fcd4af079cced6e987cbb6962137c
+MISC ChangeLog 956 SHA256 f513ced908206fb23fc9bd388985bcdd51a324bb9ba4b86c8baa4a27457404f9 SHA512 bb791e3a0a0322e357627740dd3b1e9883b5b3121dd519c30677f170a8865103309f4ccedb1d67909f7f0e82cdde7fcbedc5d0655cc4a8085470e34f2b9ac8bb WHIRLPOOL d026d1129009e110fe34e81c82b4599f6adbe7dd84bcb3f39018ee0ec5bd7bb5428033b8999e50e3d3c7a373e87bf640ad1ae9fe5c291d4867e34977ded41d2d
 MISC metadata.xml 236 SHA256 143359d37aaad252b9c640b691c9c9b146f6dd6b0a571663c65dc8b8f4a6ae2d SHA512 c688912187b76e20d182f084a10399e2b7b5af33e385bb3857b23bc3fc1b86e6da810a5121c41f18f97521687af13f23113c6e8c12cb375356bb19209cda6d06 WHIRLPOOL 9ed430c0a1c98566029d8cf09a17f7f0d49912ff157147ee72e40d4ed52419da628c8737b85a0bba5eb825ef979eb405847933bf367c1f4f7a87dbc66f1fa410
