@@ -6,13 +6,13 @@ DIST cri-2.6.1.gem 23552 SHA256 349dedff69722138ea49b69f32e2195094b4e2300caf230b
 DIST cri-2.7.0.gem 25088 SHA256 861e637cfeb0f8a618ea982f675c574520590aecbd098a2cf3d8be339ff3ed62 SHA512 4bef9bbe623b45f21b0cc66aba40ac3fd945227fb50a6b169c79b8ac9b84144119defaaed3a76044b15a916d077fa91f36c35fa22b69b7405f6c9b4fb8bf1118 WHIRLPOOL bf77d0570902a374198cd59d2f19e4da274fd1f76f1a2783ed22572ef52540812d1d9c53c783524fcbd074af0bc9f368ef387f40ab10149b9b97feb32db0d88b
 EBUILD cri-2.4.1.ebuild 646 SHA256 4c79a5e8b6bf99e753e71793f5ebfbd21bfe39610c0536d414872d2be00cb94c SHA512 95c8d7ad70e5eaa34c066b337be63605dbf1f205df9b65a05600ee69f6942bfadfeec662e5a3ae4895766c302a5a91864ab941adf9af36eb29250c6f97546197 WHIRLPOOL aece0511781bb21e77f27ec10fd47c946fa93abbb0a0bcf2f71b4e4294ced2d082b12489d380126a12b83c9cbd3dc8301446ea76623d96f519371b0c7c63adcf
 EBUILD cri-2.6.1.ebuild 771 SHA256 5033f7a41a11a418ad6cb482465828a1fa60df7b6dadb46ba39012a09331fcd5 SHA512 2f8a98479e6e53edf7837a21522895b454825b794070a6a0f8bd2cadf3976f725499fdb7b2da78c6c84b2f89cb794ab39e66e987355d5deb625dfa557a047200 WHIRLPOOL 2a9aab17205b6c818cb2355a9727fb6c8c9dd8b00f53975e3452226d0d129726acb4fc5a5e3008a8fcc0cfeda2fcbfe1f45d2c66405a9e798f997ff84c680634
-EBUILD cri-2.7.0.ebuild 844 SHA256 755c1e708e1660ddfc2814698c17366fb680c204f88b3f2e24c2ada7adb86034 SHA512 0a9a2cb43ced3ba127855920e47e9ea1f4ddfe13ec6f86c6d91902e4a503000da41010ed85c43876ba675f32b1c49c9172fc34ec3e48a7bc191b48f5078c00e7 WHIRLPOOL aed27c7a1bf3e8fb3d516606a6f31be83187ada09f7ec5a43d1b9a7536482acf1d97cecec5cd2e4290bbfccf1c3034bc0d5ef7621c167ebda5c189f0c9ac01e8
-MISC ChangeLog 2279 SHA256 8ced7dd18cd0e614301a0d35eb5510593cd9bb381d3e4947c32ae03bd88c00bc SHA512 8b845196a82188e609e07f9cde96aec827c963300ba454621f82401e7b346659b6cfec659b065dd309a358a1a5a5a543436ef8abbfc59d7751ab0d460beeb481 WHIRLPOOL ac3e69a462e940e0d4e4c42715dde669b939d0facc9e9ecec295968b75720d3a0fd49fe0bc7d785ac2f40b125b06b215e80ecbde6beff4d84c86e9f33a07189a
+EBUILD cri-2.7.0.ebuild 851 SHA256 450794cf1676513b9b4f6f0388baf0b88a51aaf2f47f204d89aee1c53b13fa12 SHA512 aede38648ab8c43cd3848ded80ca5659133f521bd6931b58f64649b006a81d96038e837f7b501325746abe32534eda1dc8910938a0f3daec01fcefc2fc31eb66 WHIRLPOOL f07b2c13ccea36e492c44cbff11d8ec0ef85698abef0a00a901da95f62e1cfe21a0824c289cd20c32f8fc0bffdffb185c66c663c63894d5419e9de4929aecb3f
+MISC ChangeLog 2362 SHA256 d640ddd6f6308b04a875e1d6ff4fda8a1ccb8322e6b0a7e96d26a30ee622eb9e SHA512 6b8e8d3d8e40a0b40f603e65933e022fe81a15015e0a960ef5338af86b3180f7d1ae1d02ac513601bdbee96b6b63ca2b576a4b7d6ae712f3bfd7623b5230ad9e WHIRLPOOL 3f17d20aba13deb91df849ef9044b6f08419bd37d9ccb65564bae2499a01a03a54c235fcfa85713dbfaf9350b6e9c08a90a40a8b484305635b4ebc4952ad668c
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlVFu4oACgkQiIP6VqMIqNfkNAEAgMewTSo+KAK1iu+uETdw5Tfe
-V1tEMqruQeRySZJ/M54A/j9DKqGiLP6WlEiUeXE8gHKqoE1c5eXmSM4WvqYziPSi
-=ifc5
+iF4EAREIAAYFAlVIYMAACgkQiIP6VqMIqNfBMwD5AdVJGOSkIbWf8VqJN/mFRbAk
+7cHMAwpfAnQPqZpG6+ABAI2W8u0P6mbYHqb/wW7oY5t2RaI7IrLotaLUj3D9hPlU
+=3o8U
 -----END PGP SIGNATURE-----
