@@ -1,9 +1,9 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/cri/cri-2.7.0.ebuild,v 1.1 2015/05/03 06:09:08 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/cri/cri-2.7.0.ebuild,v 1.2 2015/05/05 06:18:39 graaff Exp $
 
 EAPI=5
-USE_RUBY="ruby19 ruby20 ruby21"
+USE_RUBY="ruby19 ruby20 ruby21 ruby22"
 
 RUBY_FAKEGEM_EXTRADOC="NEWS.md README.adoc"
 
