@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/flask-migrate
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/flask-migrate/ChangeLog,v 1.5 2015/03/24 04:28:37 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/flask-migrate/ChangeLog,v 1.6 2015/05/05 06:25:38 patrick Exp $
+
+*flask-migrate-1.4.0 (05 May 2015)
+
+  05 May 2015; Patrick Lauer <patrick@gentoo.org> +flask-migrate-1.4.0.ebuild:
+  Bump
 
 *flask-migrate-1.3.1 (24 Mar 2015)
 
